app/globals.css
@import "tailwindcss";

@custom-variant dark (&:is(.dark *));

:root {
  --color-1: oklch(0.162 0 0);
  --color-2: oklch(0.195 0 0);
  --color-3: oklch(0.254 0 0);
  --color-4: oklch(0.302 0 0);
  --color-5: oklch(0.348 0 0);
  --color-6: oklch(0.396 0 0);
  --color-7: oklch(0.459 0 0);
  --color-8: oklch(0.549 0 0);
  --color-9: oklch(0.649 0 0);
  --color-10: oklch(0.72 0 0);
  --color-11: oklch(0.863 0 0);
  --color-12: oklch(0.933 0 0);
}

@theme inline {
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --radius-lg: 0.625rem;
  --color-brand-1: var(--color-1);
  --color-brand-2: var(--color-2);
  --color-brand-3: var(--color-3);
  --color-brand-4: var(--color-4);
  --color-brand-5: var(--color-5);
  --color-brand-6: var(--color-6);
  --color-brand-7: var(--color-7);
  --color-brand-8: var(--color-8);
  --color-brand-9: var(--color-9);
  --color-brand-10: var(--color-10);
  --color-brand-11: var(--color-11);
  --color-brand-12: var(--color-12);
}

@layer base {
  body {
    background-color: var(--color-1);
    color: var(--color-12);
  }
}

